--- a/styles/base.scss
+++ b/styles/base.scss
@@ -3,7 +3,6 @@
 $cWhite: white;
 $cBlack: black;
 
-
 p {
   color: $cWhite;
 }
@@ -84,7 +83,6 @@ body {
   }
 }
 
-
 //ヘッダー
 .header {
   position: fixed;
@@ -121,9 +119,9 @@ body {
   }
 }
 
-
 .dt-header {
   overflow: hidden;
+  opacity: 0;
   &__inner {
     display: flex;
   }
@@ -131,7 +129,6 @@ body {
     display: flex;
   }
 }
-
 
 // モバイルメニュー
 .mobile-menu {
@@ -144,7 +141,7 @@ body {
   opacity: 0;
   visibility: hidden;
   transform: translateX(50%);
-  transition: .7s;
+  transition: 0.7s;
 
   &__cover {
     position: fixed;
@@ -154,7 +151,7 @@ body {
     visibility: hidden;
     &.menu-open {
       background-color: rgba(0, 0, 0, 0.5);
-      transition: .7s;
+      transition: 0.7s;
       opacity: 1;
       visibility: visible;
       z-index: 700;
@@ -173,7 +170,7 @@ body {
       height: 2px;
       display: block;
       margin-bottom: 9px;
-      transition: .5s;
+      transition: 0.5s;
     }
 
     &.menu-open {
@@ -195,13 +192,13 @@ body {
     list-style: none;
     padding: 0 40px;
     margin-top: 100px;
-    transition: .7s;
+    transition: 0.7s;
     transform: translateX(50%);
     @for $i from 1 through 3 {
       &:nth-child(#{$i}) {
         transition-delay: $i * 0.07s;
       }
-    }  
+    }
     &.menu-open {
       transform: translateX(0);
     }
@@ -218,17 +215,14 @@ body {
   }
 }
 
-
-
 .menu-open {
   &.mobile-menu {
-      transform: translateX(0);
-      visibility: visible;
-      opacity: 1;
-      z-index: 900;
+    transform: translateX(0);
+    visibility: visible;
+    opacity: 1;
+    z-index: 900;
   }
 }
-
 
 .main {
   width: 100%;
@@ -240,47 +234,45 @@ body {
   }
 }
 
-
-  .inview {
-    & > .en {
-        transform: translateY(-50px);
-        transition: 1s;      
-        // transition-delay: 2s;
-        opacity: 0.3;
-        @for $i from 1 through 7 {
-          & .char {
-            &:nth-child(#{$i}) {
-              transition-delay: $i * 0.04s;
-            }
-          }
+.inview {
+  & > .en {
+    transform: translateY(-50px);
+    transition: 1s;
+    // transition-delay: 2s;
+    opacity: 0.3;
+    @for $i from 1 through 7 {
+      & .char {
+        &:nth-child(#{$i}) {
+          transition-delay: $i * 0.04s;
         }
       }
-    & > .ja {
-      transform: translateY(-50px);
-      transition: 1s;      
-      // transition-delay: 3s;
-      opacity: 1;
-    }
-    & .span1 {
-      transition: all 1s;
-      transform: scaleX(3);
-      transform-origin: left;
-      opacity: 1 !important;
-    }
-    & .span2 {
-      transition: all 1s;
-      transform: scaleX(3);
-      opacity: 1 !important;
-      transform-origin: right;
-    }
-    & .span3 {
-      transition: all 1s;
-      transform: scaleX(3);
-      transform-origin: left;
-      opacity: 1 !important;
     }
   }
-
+  & > .ja {
+    transform: translateY(-50px);
+    transition: 1s;
+    // transition-delay: 3s;
+    opacity: 1;
+  }
+  & .span1 {
+    transition: all 1s;
+    transform: scaleX(3);
+    transform-origin: left;
+    opacity: 1 !important;
+  }
+  & .span2 {
+    transition: all 1s;
+    transform: scaleX(3);
+    opacity: 1 !important;
+    transform-origin: right;
+  }
+  & .span3 {
+    transition: all 1s;
+    transform: scaleX(3);
+    transform-origin: left;
+    opacity: 1 !important;
+  }
+}
 
 .en {
   color: $cWhite;
@@ -350,7 +342,7 @@ body {
       margin-bottom: 50px;
       object-fit: cover;
       transform: translateX(50%);
-      transition: .7s;
+      transition: 0.7s;
       opacity: 0;
       visibility: hidden;
       &.inview {
@@ -364,7 +356,7 @@ body {
     width: 90%;
     margin: 0 auto;
     transform: translateX(50%);
-    transition: .7s;
+    transition: 0.7s;
     opacity: 0;
     visibility: hidden;
     &.inview {
@@ -396,7 +388,6 @@ body {
     }
   }
 
-
   &__en {
     position: absolute;
     top: 50px;
@@ -419,7 +410,7 @@ body {
   }
   &__item {
     margin-bottom: 30px;
-    transition: .7s;
+    transition: 0.7s;
     transform: translateX(-50%);
     opacity: 0;
     visibility: hidden;
@@ -470,15 +461,15 @@ body {
   &__form {
     width: 100%;
     height: 100%;
-    overflow: hidden;
     & form {
       height: 100%;
-      width: 80%;
+      width: 50%;
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: space-between;
-      margin-left: 25%;
+      margin-left: 40%;
+      position: relative;
     }
   }
   &__item {
@@ -490,20 +481,23 @@ body {
       cursor: pointer;
     }
     & input {
-      width: 80%;
+      width: 100%;
       font-size: 14px;
     }
     & textarea {
-      width: 80%;
+      width: 100%;
       font-size: 12px;
     }
   }
   &__btn {
+    position: absolute;
+    bottom: 0;
+    right: 0;
     display: flex;
-    justify-content: right;
-    width: 80%;
-    margin: 0 auto 0 0;
+    width: 40%;
+    transform: translate(-50%, 120%);
     & input {
+      width: 90%;
       cursor: pointer;
       border: none;
       background-color: $cWhite;
@@ -535,10 +529,10 @@ footer {
       &:hover::before {
         transform: translateX(0);
         opacity: 1;
-        transition: .2s;
+        transition: 0.2s;
       }
       &::before {
-        content: '';
+        content: "";
         position: absolute;
         bottom: 0;
         left: 0;
@@ -546,7 +540,7 @@ footer {
         height: 1px;
         background-color: $cWhite;
         opacity: 0;
-        transition: .2s;
+        transition: 0.2s;
         transform: translateX(-50%);
       }
     }
@@ -554,8 +548,8 @@ footer {
 }
 
 @media (min-width: 600px) {
-  @import 'breakpoints/ipad';
+  @import "breakpoints/ipad";
 }
 @media (min-width: 960px) {
-  @import 'breakpoints/desktop';
-  }
+  @import "breakpoints/desktop";
+}
