--- a/styles/base.css
+++ b/styles/base.css
@@ -300,7 +300,7 @@ body {
 
 .main__img {
   width: 100%;
-  height: 100%;
+  height: 100vh;
   -o-object-fit: cover;
      object-fit: cover;
 }
@@ -669,8 +669,8 @@ body {
   display: -ms-flexbox;
   display: flex;
   width: 40%;
-  -webkit-transform: translate(-50%, 120%);
-          transform: translate(-50%, 120%);
+  -webkit-transform: translate(-40%, 120%);
+          transform: translate(-40%, 120%);
 }
 
 .contact__btn input {
