--- a/styles/base.css
+++ b/styles/base.css
@@ -528,7 +528,8 @@ body {
 .works__en {
   position: absolute;
   top: 50px;
-  right: 60px;
+  right: 50px;
+  z-index: 1000;
 }
 
 .works__en span {
@@ -669,8 +670,8 @@ body {
   display: -ms-flexbox;
   display: flex;
   width: 40%;
-  -webkit-transform: translate(-40%, 120%);
-          transform: translate(-40%, 120%);
+  -webkit-transform: translate(-70%, 120%);
+          transform: translate(-70%, 120%);
 }
 
 .contact__btn input {
